--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -266,6 +266,16 @@ J. L. Marroquin},
   organization={ACM}
 }
 
+
+@inproceedings{indyk1998approximate,
+  title={Approximate nearest neighbors: towards removing the curse of dimensionality},
+  author={Indyk, Piotr and Motwani, Rajeev},
+  booktitle={Proceedings of the thirtieth annual ACM symposium on Theory of computing},
+  pages={604--613},
+  year={1998},
+  organization={ACM}
+}
+
 @inproceedings{charikar2002similarity,
   title={Similarity estimation techniques from rounding algorithms},
   author={Charikar, Moses S},
@@ -357,4 +367,80 @@ J. L. Marroquin},
   pages={529--536},
   year={2009},
   publisher={Springer}
+}
+
+@inproceedings{KrylovLPP08,
+  author    = {Vladimir Krylov and
+               Andrey Logvinov and
+               Alexander Ponomarenko and
+               Dmitry Ponomarev},
+  title     = {Metrized Small World Properties Based Data Structure},
+  booktitle = {SEDE},
+  year      = {2008},
+  pages     = {203-208},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{cayton2009efficient,
+  title={Efficient Bregman range search},
+  author={Cayton, Lawrence},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={243--251},
+  year={2009}
+}
+
+@article{wang2007sizing,
+  title={Sizing sketches: a rank-based analysis for similarity search},
+  author={Wang, Zhe and Dong, Wei and Josephson, William and Lv, Qin and Charikar, Moses and Li, Kai},
+  journal={ACM SIGMETRICS Performance Evaluation Review},
+  volume={35},
+  number={1},
+  pages={157--168},
+  year={2007},
+  publisher={ACM}
+}
+
+@inproceedings{lv2007multi,
+  title={Multi-probe LSH: efficient indexing for high-dimensional similarity search},
+  author={Lv, Qin and Josephson, William and Wang, Zhe and Charikar, Moses and Li, Kai},
+  booktitle={Proceedings of the 33rd international conference on Very large data bases},
+  pages={950--961},
+  year={2007},
+  organization={VLDB Endowment}
+}
+@article{tellez2013succinct,
+  title={Succinct nearest neighbor search},
+  author={Tellez, Eric Sadit and Ch{\'a}vez, Edgar and Navarro, Gonzalo},
+  journal={Information Systems},
+  volume={38},
+  number={7},
+  pages={1019--1030},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@inproceedings{li2008efficient,
+  title={Efficient merging and filtering algorithms for approximate string searches},
+  author={Li, Chen and Lu, Jiaheng and Lu, Yiming},
+  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  pages={257--266},
+  year={2008},
+  organization={IEEE}
+}
+
+
+@incollection{malkov2012scalable,
+  title={Scalable distributed algorithm for approximate nearest neighbor search problem in high dimensional general metric spaces},
+  author={Malkov, Yury and Ponomarenko, Alexander and Logvinov, Andrey and Krylov, Vladimir},
+  booktitle={Similarity Search and Applications},
+  pages={132--147},
+  year={2012},
+  publisher={Springer}
+}
+@inproceedings{schlegel2011fast,
+  title={Fast Sorted-Set Intersection using SIMD Instructions.},
+  author={Schlegel, Benjamin and Willhalm, Thomas and Lehner, Wolfgang},
+  booktitle={ADMS@ VLDB},
+  pages={1--8},
+  year={2011}
 }
